@@ -23,3 +23,6 @@ libnotgnu_la_SOURCES += fseeko.h fseeko.c
 
 # tempfile
 libnotgnu_la_SOURCES += tempfile.h tempfile.c
+
+# string_to_utf8
+libnotgnu_la_SOURCES += str_to_utf8.h str_to_utf8.c
